--- a/package.json
+++ b/package.json
@@ -6,25 +6,16 @@
   "scripts": {
     "dev": "node server.js",
     "serve": "node server.js",
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
-    "preview": "vite preview",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "lint": "eslint src --ext .js,.ts",
-    "lint:fix": "eslint src --ext .js,.ts --fix",
-    "format": "prettier --write src/**/*.{js,ts,css,html}"
+    "test:coverage": "jest --coverage"
   },
   "keywords": ["metronome", "music", "tempo", "rhythm", "keyboard"],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.5.0",
-    "eslint": "^8.50.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.0.0",
-    "vite": "^4.4.0"
+    "jest-environment-jsdom": "^29.7.0"
   }
 }
